@startuml

class ListCandidateUI {
  -ListCandidateController controller
  +doShow(): boolean
  +headline(): String
}

class ListCandidateController {
  -CandidateRepository candidateRepository
  +ListCandidateController(CandidateRepository candidateRepository)
  +listCandidates(): List<Candidate>
}

class Candidate {
  -EmailAddress email
  -PhoneNumber phoneNumber
  -Name name
  +Candidate(String firstname, String surname, String email, String phoneNumber)
  +Candidate(Candidate candidate)
  +emailAddress(): EmailAddress
  +name(): Name
  +nameString(): String
  +phoneNumber(): PhoneNumber
  +equals(Object o): boolean
  +hashCode(): int
  +sameAs(Object other): boolean
  +identity(): EmailAddress
}

class CandidateRepository {
  +CandidateRepository()
  +save(Candidate candidate): Candidate
  +findByEmail(EmailAddress email): Optional<Candidate>
  +findByIdentity(EmailAddress email): Optional<Candidate>
}

CandidateRepository "1" --> "*" Candidate
ListCandidateController "1" o--> "1" CandidateRepository
ListCandidateUI "1" o--> "1" ListCandidateController
ListCandidateUI -..> ListCandidateController : "create"




@enduml